force-app/main/default/objects/Application__c/fields/Balloon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balloon_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balloon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>