force-app/main/default/objects/Application__c/fields/Cancel_date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_date__c</fullName>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>