force-app/main/default/objects/Application__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>