force-app/main/default/objects/Application__c/fields/Cancel_user__c.field-meta.xml
<CustomField>
    <fullName>Cancel_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>