force-app/main/default/objects/Application__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>