force-app/main/default/objects/Application__c/fields/Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Day_Count__c</fullName>
    <formula>IF(!ISBLANK( Loan_Product__c ),  TEXT( Loan_Product__r.Day_Count__c ),&apos;&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Count</label>
    <type>Text</type>
</CustomField>