force-app/main/default/objects/Application__c/fields/Final_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Rate__c</fullName>
    <formula>IF(ISNULL(Loan_Product__r.Interest_Product__r.Current_Rate__c),Rate__c,(Loan_Product__r.Interest_Product__r.Current_Rate__c+Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>