force-app/main/default/objects/Application__c/fields/Grant_Product__c.field-meta.xml
<CustomField>
    <fullName>Grant_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Product</label>
    <referenceTo>Grant_Product__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>