force-app/main/default/objects/Application__c/fields/Guarantors_Count__c.field-meta.xml
<CustomField>
    <fullName>Guarantors_Count__c</fullName>
    <label>Guarantors Count</label>
    <summaryForeignKey>Guarantor__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>