force-app/main/default/objects/Application__c/fields/Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Method__c</fullName>
    <formula>IF(!ISBLANK( Loan_Product__c ),  TEXT(Loan_Product__r.Interest_Calculation_Method__c)   ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Calculation Method</label>
    <type>Text</type>
</CustomField>