force-app/main/default/objects/Application__c/fields/Interest_Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Compounding_Frequency__c</fullName>
    <formula>IF(! ISBLANK( Loan_Product__c),  TEXT( Loan_Product__r.Interest_Compounding_Frequency__c ), &apos;&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Compounding Frequency</label>
    <type>Text</type>
</CustomField>