force-app/main/default/objects/Application__c/fields/Interest_Product__c.field-meta.xml
<CustomField>
    <fullName>Interest_Product__c</fullName>
    <formula>Loan_Product__r.Interest_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Product</label>
    <type>Text</type>
</CustomField>