force-app/main/default/objects/Application__c/fields/Pay_Seasonal_Interest__c.field-meta.xml
<CustomField>
    <fullName>Pay_Seasonal_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Seasonal Interest</label>
    <type>Checkbox</type>
</CustomField>