force-app/main/default/objects/Application__c/fields/Periods_Deferred_with_Grace__c.field-meta.xml
<CustomField>
    <fullName>Periods_Deferred_with_Grace__c</fullName>
    <label>Periods Deferred With Grace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>