force-app/main/default/objects/Application__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Total Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>