force-app/main/default/objects/Application__c/fields/Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>