force-app/main/default/objects/Application__c/fields/Repeat_Seasonal_Periods__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Seasonal_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Seasonal Periods</label>
    <type>Checkbox</type>
</CustomField>