force-app/main/default/objects/Application__c/fields/Seasonal_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seasonal Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>