force-app/main/default/objects/Application__c/fields/Seasonal_Periods__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Periods__c</fullName>
    <label>Seasonal Periods Without Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>