force-app/main/default/objects/Application__c/fields/Total_Collateral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Collateral_Amount__c</fullName>
    <label>Total Collateral Amount</label>
    <summarizedField>Collateral__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Collateral__c.Expired__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Collateral__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>