force-app/main/default/objects/Application__c/fields/Total_Jobs_Maintained__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs_Maintained__c</fullName>
    <label>Total Jobs Maintained</label>
    <summarizedField>Application_Impact__c.Number_of_Jobs__c</summarizedField>
    <summaryFilterItems>
        <field>Application_Impact__c.Impact__c</field>
        <operation>equals</operation>
        <value>Maintained</value>
    </summaryFilterItems>
    <summaryForeignKey>Application_Impact__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>