force-app/main/default/objects/Application__c/recordTypes/Business_Grant.recordType-meta.xml
<RecordType>
    <fullName>Business_Grant</fullName>
    <active>true</active>
    <label>Business Grant</label>
</RecordType>