force-app/main/default/objects/Application__c/recordTypes/Business_Loan.recordType-meta.xml
<RecordType>
    <fullName>Business_Loan</fullName>
    <active>true</active>
    <label>Business Loan</label>
</RecordType>