force-app/main/default/objects/Application__c/recordTypes/Personal_Grant.recordType-meta.xml
<RecordType>
    <fullName>Personal_Grant</fullName>
    <active>true</active>
    <label>Personal Grant</label>
</RecordType>