force-app/main/default/objects/Application__c/recordTypes/Personal_Loan.recordType-meta.xml
<RecordType>
    <fullName>Personal_Loan</fullName>
    <active>true</active>
    <label>Personal Loan</label>
</RecordType>