force-app/main/default/objects/Application__c/validationRules/Amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount must be positive</errorMessage>
</ValidationRule>