force-app/main/default/objects/Application__c/validationRules/Approved_Amount_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Amount_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Completion_Status__c, &quot;Approved&quot;) &amp;&amp; ISNULL(Approved_Amount__c)</errorConditionFormula>
    <errorDisplayField>Approved_Amount__c</errorDisplayField>
    <errorMessage>Please enter the value for Approved amount</errorMessage>
</ValidationRule>