force-app/main/default/objects/Application__c/validationRules/Approved_Amount_Valid_If_Not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Amount_Valid_If_Not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Approved_Amount__c)), NOT( ISPICKVAL(Completion_Status__c ,&quot;Approved&quot; )))</errorConditionFormula>
    <errorMessage>Approved Amount can only be changed by approving the application</errorMessage>
</ValidationRule>