force-app/main/default/objects/Application__c/validationRules/Approved_Date_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Date_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Completion_Status__c, &quot;Approved&quot;)   &amp;&amp;   ISBLANK(Approved_Date__c)</errorConditionFormula>
    <errorDisplayField>Approved_Date__c</errorDisplayField>
    <errorMessage>Please select the Approved date</errorMessage>
</ValidationRule>