force-app/main/default/objects/Application__c/validationRules/Balloon_amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Balloon_amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Balloon_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Balloon_Amount__c</errorDisplayField>
    <errorMessage>Balloon Amount must be positive</errorMessage>
</ValidationRule>