force-app/main/default/objects/Application__c/validationRules/Cancel_Date_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Date_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Completion_Status__c, &quot;Canceled&quot;) &amp;&amp; ISNULL( Cancel_date__c )</errorConditionFormula>
    <errorDisplayField>Cancel_date__c</errorDisplayField>
    <errorMessage>Please select the cancel date</errorMessage>
</ValidationRule>