force-app/main/default/objects/Application__c/validationRules/Cancel_reason_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_reason_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Completion_Status__c, &quot;Canceled&quot;) &amp;&amp; ISPICKVAL( Cancel_Reason__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please select the Cancel reason</errorMessage>
</ValidationRule>