force-app/main/default/objects/Application__c/validationRules/Cancel_reason_Valid_If_Not_canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_reason_Valid_If_Not_canceled</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL( Cancel_Reason__c ,&quot;&quot; )), NOT( ISPICKVAL(Completion_Status__c ,&quot;Canceled&quot; )))</errorConditionFormula>
    <errorMessage>Cancel reason can only be changed by cancelling the application</errorMessage>
</ValidationRule>