force-app/main/default/objects/Application__c/validationRules/Cancel_User_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_User_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Completion_Status__c, &quot;Canceled&quot;) &amp;&amp; Cancel_user__c == &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Cancel_user__c</errorDisplayField>
    <errorMessage>Please choose the value for cancel user</errorMessage>
</ValidationRule>