force-app/main/default/objects/Application__c/validationRules/Completion_Status_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Status_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Complete&quot;) &amp;&amp;  ISPICKVAL( Completion_Status__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Completion_Status__c</errorDisplayField>
    <errorMessage>Please select the completion status</errorMessage>
</ValidationRule>