force-app/main/default/objects/Application__c/validationRules/Finalised_loan_status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalised_loan_status_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNEW()), OR (ISPICKVAL(PRIORVALUE(Status__c),&quot;Denied&quot;), ISPICKVAL(PRIORVALUE(Status__c),&quot;Canceled&quot;), ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;)))</errorConditionFormula>
    <errorMessage>Finalized loan can not be changed</errorMessage>
</ValidationRule>