force-app/main/default/objects/Application__c/validationRules/Initiated_loan_status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiated_loan_status_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISNEW(), NOT( ISPICKVAL( Status__c , &quot;New&quot;)))</errorConditionFormula>
    <errorMessage>New applications must have their status set to &apos;New&apos;</errorMessage>
</ValidationRule>