force-app/main/default/objects/Application__c/validationRules/Loan_Status_Backward_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Status_Backward_validation</fullName>
    <active>true</active>
    <errorConditionFormula>if( ISPICKVAL( PRIORVALUE( Status__c ),&quot;Submitted&quot; ),
ISPICKVAL(Status__c , &quot;New&quot;),
IF(ISPICKVAL( PRIORVALUE( Status__c ),&quot;Under Review&quot; ),
ISPICKVAL(Status__c , &quot;New&quot;)||ISPICKVAL(Status__c , &quot;Submitted&quot;),false))</errorConditionFormula>
    <errorMessage>Status cannot be changed to prior status</errorMessage>
</ValidationRule>