force-app/main/default/objects/Application__c/validationRules/Loan_status_validation_if_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_status_validation_if_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISNEW()) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c),&quot;Complete&quot;) , 
  IF( CONTAINS( RecordType.Name ,&apos;Loan&apos;)&amp;&amp; PRIORVALUE(Loan__c ) == 
     NULL ,
      false , 
     true )  ,
 false
)</errorConditionFormula>
    <errorMessage>Completed application can not be changed</errorMessage>
</ValidationRule>