force-app/main/default/objects/Application__c/validationRules/Loan_status_validation_if_new.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_status_validation_if_new</fullName>
    <active>false</active>
    <errorConditionFormula>IF (ISPICKVAL(PRIORVALUE(Status__c),&quot;New&quot;)
,(ISPICKVAL(Status__c , &quot;Under Review&quot;)|| ISPICKVAL(Status__c , &quot;Complete&quot;)),False)</errorConditionFormula>
    <errorMessage>Status can only be changed to &apos;Submitted&apos; from the current status</errorMessage>
</ValidationRule>