force-app/main/default/objects/Application__c/validationRules/Rate_must_be_greater_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_must_be_greater_zero</fullName>
    <active>false</active>
    <errorConditionFormula>Rate__c = 0</errorConditionFormula>
    <errorDisplayField>Rate__c</errorDisplayField>
    <errorMessage>Rate must be greater than zero</errorMessage>
</ValidationRule>