force-app/main/default/objects/Application__c/validationRules/Rate_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Rate__c</errorDisplayField>
    <errorMessage>Rate must be positive</errorMessage>
</ValidationRule>