force-app/main/default/objects/Application__c/validationRules/Seasonal_Period_Comma_Separat_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_Period_Comma_Separat_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Seasonal_Periods__c )),
NOT(REGEX(Seasonal_Periods__c ,&quot;^[0-9,*]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Seasonal_Periods__c</errorDisplayField>
    <errorMessage>Seasonal Periods Without Payments must be whole numbers separated by a comma e.g. 2,4,5</errorMessage>
</ValidationRule>