force-app/main/default/objects/Application__c/validationRules/Under_review_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Under_review_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF (ISPICKVAL(PRIORVALUE(Status__c),&quot;Submitted&quot;)
,ISPICKVAL(Status__c , &quot;Complete&quot;),false)</errorConditionFormula>
    <errorMessage>Status can only be changed to &apos;Under Review&apos; from the current status</errorMessage>
</ValidationRule>