force-app/main/default/objects/Application__c/validationRules/Valid_Initial_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Initial_Payment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNULL(Initial_Payment_Date__c),false,IF(ISNULL( Disbursal_Date__c),Initial_Payment_Date__c&lt;=TODAY(),
 Initial_Payment_Date__c&lt;=Disbursal_Date__c))</errorConditionFormula>
    <errorDisplayField>Initial_Payment_Date__c</errorDisplayField>
    <errorMessage>Initial Date must be in future or greater than Disbursal Date</errorMessage>
</ValidationRule>