force-app/main/default/objects/Application__c/listViews/Application.listView-meta.xml
<ListView>
    <fullName>Application</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Application</label>
</ListView>